Added dataset references to README.md and app HTML templates

--- a/src/app/templates/_quick_preview.html
+++ b/src/app/templates/_quick_preview.html
@@ -38,11 +38,11 @@
                </ul>
                 {% endif %}
                 </div>
-                {% if content_foot_note %}
                 <div class="panel-footer">
-                    <span class="label label-info pull-right">preview_foot_note</span>
+                    <span>
+                        <a class="label label-info pull-right" href="https://ccp.jhu.edu/kap-covid/">Source: covid19_jhu_csse_eu.summary</a>
+                    </span>
                 </div>
-                {% endif %}
             </div>
 </div>
 {% endblock %}
